Routing and hot reloading.

--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,12 @@
             }
         ],
         "react"
-    ]
+    ],
+    "env": {
+        "development": {
+            "presets": [
+                "react-hmre"
+            ]
+        }
+    }
 }
