--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/subhajitdas/cnd-web#readme",
   "dependencies": {
+    "bootstrap": "4.0.0",
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
@@ -41,11 +42,16 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "css": "^2.2.1",
+    "css-loader": "^0.28.11",
     "redux-immutable-state-invariant": "^2.1.0",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.20.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.2",
     "webpack-node-externals": "^1.6.0"
   }
 }
